# gpufrac

./: .gitmodules  README.md
src/: CMakeLists.txt  application.cpp  application.h  application.hpp  cuda_frac.cu  cuda_globals.h  cuda_globals.hpp  fractal.hpp  fractal_mccabe.cu  fractal_mccabe.cuh  fractal_popcorn.cu  fractal_popcorn.cuh  gl_globals.hpp  image.cpp  image.h  image.hpp  main.cpp  mccabe.cu  shader.cpp  shader.h  shader.hpp
src/shaders/: quad.frag  quad.vert
